Fixed Mobile Logo is too large #12

--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -5,10 +5,26 @@
 
 header.main {
   position: static;
+  height: auto;
+}
+
+.header-container {
+  min-height: 70px;
 }
 
 .logo {
-  margin-left: 15px;
+  position: absolute;
+  float: none;
+  padding: 0;
+  padding-left: 15px;
+  width: 80px;
+  height: auto;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.logo > img {
+  max-width: 100%;
 }
 
 .btn-hire {
@@ -21,6 +37,8 @@ header.main {
   top: 35px;
   font-family: PeaceSans, sans-serif;
   padding: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 header.menu {
